--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
     <script>
         // Replace with your actual n8n webhook URL
-        const AUTH_WEBHOOK = 'https://noral.gleeze.com/webhook-test/auth';
+        const AUTH_WEBHOOK = 'https://noral.gleeze.com/webhook/auth';
 
         function showTab(tabName) {
             // Update tabs
